<resources>
    <string name="app_name" translatable="false">Mini Brain Academy</string>
    <string name="welcome">Welcome, %1$s!</string>
    <string name="calendar">Calendar</string>
    <string name="my_events">My events</string>
    <string name="schedule">Schedule</string>
    <string name="games">Games</string>
    <string name="announcements">Announcements</string>
    <string name="profile">Profile</string>
    <string name="animators">Animators</string>
    <string name="places">Places</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="month0">January</string>
    <string name="month1">February</string>
    <string name="month2">March</string>
    <string name="month3">April</string>
    <string name="month4">May</string>
    <string name="month5">June</string>
    <string name="month6">July</string>
    <string name="month7">August</string>
    <string name="month8">September</string>
    <string name="month9">October</string>
    <string name="month10">November</string>
    <string name="month11">December</string>
    <string name="weekday0">M</string>
    <string name="weekday1">T</string>
    <string name="weekday2">W</string>
    <string name="weekday3">T</string>
    <string name="weekday4">F</string>
    <string name="weekday5">S</string>
    <string name="weekday6">S</string>
    <string name="weekday0SemiLong">Mon</string>
    <string name="weekday1SemiLong">Tue</string>
    <string name="weekday2SemiLong">Wed</string>
    <string name="weekday3SemiLong">Thu</string>
    <string name="weekday4SemiLong">Fri</string>
    <string name="weekday5SemiLong">Sat</string>
    <string name="weekday6SemiLong">Sun</string>
    <string name="cancel">Cancel</string>
    <string name="requirements">Requirements</string>
    <string name="no_phone_number">No phone number</string>
    <string name="search_events">Search events</string>
    <string name="events_this_week">Events this week</string>
    <string name="week" translatable="false">%1$d.-%2$d.</string>
    <string name="first_week">to %1$d.</string>
    <string name="last_week">from %1$d.</string>
    <string name="check_whole_month">Check whole month</string>
    <string name="add_a_game">Add a game</string>
    <string name="save">Save</string>
    <string name="basic_information">Basic information</string>
    <string name="game_title">Game title</string>
    <string name="short_description">Short description</string>
    <string name="icon">Icon</string>
    <string name="add_a_requirement">Add a requirement</string>
    <string name="requirement">Requirement</string>
    <string name="add">Add</string>
    <string name="fill_the_title">Fill in the title!</string>
    <string name="month_checked">Month checked!</string>
    <string name="undo">Undo</string>
    <string name="add_an_event">Add an event</string>
    <string name="event_title">Event title</string>
    <string name="phone_number">Phone number</string>
    <string name="total_cost">Total cost</string>
    <string name="start_date">Start date</string>
    <string name="start_time">Start time</string>
    <string name="address">Address</string>
    <string name="event_address">Event address</string>
    <string name="color">Color</string>
    <string name="duration">Duration</string>
    <string name="add_an_animator">Add an animator</string>
    <string name="available_animators">Available animators</string>
    <string name="all_animators">All animators</string>
    <string name="search_animators">Search animators</string>
    <string name="no_available_animators">No available animators</string>
    <string name="no_animators">No animators</string>
    <string name="ok" translatable="false">OK</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="required_amount">Required amount</string>
    <string name="empty_slot">Empty slot</string>
    <string name="poland">Poland</string>
    <string name="add_an_announcement">Add an announcement</string>
    <string name="instantaneous">Instantaneous</string>
    <string name="important">Important</string>
    <string name="therest">The rest</string>
    <string name="announcement_content">Announcement content</string>
    <string name="related_events">Related events</string>
    <string name="related_animators">Related animators</string>
    <string name="no_events">No events</string>
    <string name="choose">Choose</string>
    <string name="fill_the_content">Fill in the content</string>
    <string name="add_a_place">Add a place</string>
    <string name="place_address">Place address</string>
    <string name="place_photo">Place photo</string>
    <string name="loading">Loading</string>
    <string name="go_online">Go online!</string>
    <string name="fill_the_description">Fill in the description</string>
    <string name="errands">Errands:</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="done_errands">Done: %d</string>
    <string name="canceled_errands">Canceled: %d</string>
    <string name="canceled">Canceled</string>
    <string name="most_frequent">Most frequent</string>
    <string name="call">Call</string>
    <string name="errands_history">Errands history</string>
    <string name="favourite_games">Favourite games</string>
    <string name="requests">Requests</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="max_distance">Max distance</string>
    <string name="have_keys">Have keys</string>
    <string name="location">Location</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="discard">Discard</string>
    <string name="discard_changes">Do you really want to discard changes you made?</string>
    <string name="distance" translatable="false">%s, %dkm</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="any">Any</string>
    <string name="agree">Agree</string>
    <string name="maybe_later">Maybe later</string>
    <string name="location_permission_explanation">Location is necessary to calculate distance between you and your friends!</string>
    <string name="login">Login</string>
    <string name="address_email">Address email</string>
    <string name="password">Password</string>
    <string name="login_information">Login information</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="do_not_have_account">Do not have an account?</string>
    <string name="ask_for_account">Ask for an account</string>
    <string name="new_password_message">You\'ll get an email with a new password.</string>
    <string name="remember_now">Remember now?</string>
    <string name="send">Send</string>
    <string name="new_account_message">A request will be send to the administrator.</string>
    <string name="have_account">Already have an account?</string>
    <string name="request_sent">A request has been sent!</string>
    <string name="new_password_sent">A new password has been sent.</string>
    <string name="back">Back</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="full_name">Full name</string>
    <string name="next">Next</string>
    <string name="pick_a_photo">Pick a photo</string>
    <string name="storage">External storage</string>
    <string name="storage_permission_explanation">We need this permission to set the image from your gallery.</string>
    <string name="account_does_not_exist">That account does not exist!</string>
    <string name="logout">Logout</string>
    <string name="fill_blanks">Fill in the blanks!</string>
    <string name="invalid_email">The email address is badly formatted.</string>
    <string name="wrong_password">The password is invalid or the user does not have a password.</string>
    <string name="email_in_use">The email address is already in use by another account.</string>
    <string name="user_not_found">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="request_already_sent">The request has been already sent!</string>
    <string name="password_requirements">Password needs to be at least 6 characters long!</string>
    <string name="rank_1">Helper</string>
    <string name="rank_2">Animator</string>
    <string name="rank_3">Versatile</string>
    <string name="icon_creator">Created by Fontawesome</string>
    <string name="account_deleted">An account has been deleted.</string>
    <string name="all_events">All events</string>
    <string name="already_joined">You are already joined!</string>
    <string name="nonCancelable">You are not able to cancel your presence.</string>
    <string name="remove_animator_event">Do you really want to remove %s from this event?</string>
    <string name="done_event">This event is done.</string>
    <string name="announcement_contains">You have been mention in the announcement.</string>
    <string name="event_contains">You have been mention in the event.</string>
    <string name="new_request">A new request!</string>
    <string name="event_upcoming">Prepare for upcoming event!</string>
    <string name="take_place_in">Will take place in: %s</string>
    <string name="remind">Remind</string>
    <string name="reminder_set">Reminder set for: %s</string>
    <string name="view_more">View more</string>
    <string name="event_end">Event has just ended!</string>
    <string name="took_place_in">Took place in: %s</string>
    <string name="done_events">Done events</string>
    <string name="form">Form</string>
    <string name="place_name_question">What was the name of that place?</string>
    <string name="place_name">Place name</string>
    <string name="opinion_question">What do you think about it?</string>
    <string name="games_played">What were the games you played?</string>
    <string name="settings">Settings</string>
    <string name="change_rank">Change rank</string>
    <string name="delete">Delete</string>
    <string name="remove_key">Remove key</string>
    <string name="give_key">Give key</string>
    <string name="help">Help</string>
    <string name="title_activity_settings">Settings</string>
    <string name="delete_animator">Do you really want to delete %s?</string>
    <string name="notification">Notification</string>
    <string name="for_all">For all</string>
    <string name="for_selected">For selected above</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="search_places">Search places</string>
    <string name="remove_an_event">Remove an event</string>
    <string name="remove_a_place">Remove a place</string>
    <string name="remove_an_announcement">Remove an announcement</string>
    <string name="remove_a_game">Remove a game</string>
    <string name="delete_a_place">Are you sure you want to delete this place?</string>
    <string name="delete_a_game">Are you sure you want to delete this game?</string>
    <string name="delete_an_announcement">Are you sure you want to delete this announcement?</string>
    <string name="delete_an_event">Are you sure you want to delete this event?</string>
</resources>
