<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorTransparent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardBackgroundColor="@color/colorBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <EditText
                android:id="@+id/searchAnimators"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Container2"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textAlignment="gravity"
                android:background="@color/colorTransparent"
                android:hint="@string/search_animators"
                android:imeOptions="actionDone"
                android:inputType="text|textCapSentences"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:textColor="@color/colorText4"
                android:textColorHint="@color/colorText3"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageErase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/searchAnimators"
                android:layout_alignTop="@id/searchAnimators"
                android:layout_alignBottom="@id/searchAnimators"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_cancel"
                android:tint="@color/colorAccent"
                android:background="?android:selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"/>

            <include layout="@layout/divider"
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/searchAnimators"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"/>

            <ImageView
                android:id="@+id/imageSort"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignTop="@id/sortTypeList"
                android:layout_alignBottom="@id/sortTypeList"
                android:clickable="true"
                android:background="?android:selectableItemBackgroundBorderless"
                android:tint="@color/colorAccent"
                android:src="@drawable/ic_sort"
                android:focusable="true" />

            <Spinner
                android:id="@+id/sortTypeList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider1"
                android:layout_toRightOf="@id/imageSort"
                tools:listitem="@layout/simple_list_item_view"/>

            <include layout="@layout/divider"
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/sortTypeList"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"/>

            <ImageView
                android:id="@+id/imageLocation"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignTop="@id/textDistance"
                android:layout_alignBottom="@id/textDistance"
                android:tint="@color/colorAccent"
                android:src="@drawable/ic_places"/>

            <EditText
                android:id="@+id/textDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider2"
                android:layout_toRightOf="@id/imageLocation"
                android:background="@color/colorTransparent"
                android:hint="@string/max_distance"
                android:inputType="number"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:textColor="@color/colorText4"
                android:textColorHint="@color/colorText3"
                android:textSize="20sp" />

            <include layout="@layout/divider"
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/textDistance"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"/>


            <TextView
                android:id="@+id/labelHaveKeys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider3"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:text="@string/have_keys"
                android:textSize="20sp"
                android:textColor="@color/colorText4"
                android:textAlignment="gravity"
                android:gravity="center"/>

            <com.infinitemind.minibrainacademy.views.ViewPagerTabs
                android:id="@+id/tabsHaveKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_below="@id/labelHaveKeys"
                app:defaultColor="@color/colorText1"
                app:selectedColor="@color/colorAccent"
                app:tabTextSize="14sp"
                app:numberOfTabs="three"
                app:selectedTab="second"
                app:tabValue1="@string/no"
                app:tabValue2="@string/any"
                app:tabValue3="@string/yes"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        android:layout_below="@id/cardView"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:foreground="?android:selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <ImageView
                android:id="@+id/okIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textSize="18sp"
                android:textColor="@color/colorText2"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/okIcon"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>